# tutor_v2

./: .dockerignore  .gitignore  Dockerfile  Euler_Product_Vision_and_Capabilities.html  README.md  cloudbuild.yaml  deploy.sh  docker-compose.judge0.yml  euler_capabilities.py  judge0.conf  onboarding-mockup.html  start.sh  wireframe.html
backend/: .env.example  _check_session.py  _check_user.py  enrich_sd_problems.py  pyproject.toml  seed_sd_concepts.py
backend/app/: main.py
backend/app/agents/: agent_runtime.py  blueprint.py  director.py  section_manager.py  session.py
backend/app/core/: config.py  database.py  llm.py  llm_service.py  logging_config.py  models.yaml  mongodb.py  rate_limit.py  usage_tracker.py
backend/app/models/: base.py  course.py  user.py
backend/app/orchestrator/: agent.py  api.py
backend/app/services/: attachment_storage.py  beat_parser.py  byo_indexes.py  content_resolver.py  content_service.py  embedding_service.py  gcs.py  knowledge_state.py  lean_context.py  mql.py  session_router.py  session_service.py  tts_service.py  turn_queue.py
backend/mockup_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: build_search_index.py  enrich_sections.py  migrate_student_state.py  reindex.sh
backend/tests/: conftest.py  output_byo_contentmap.txt  output_full_prompt.txt  output_grounding_results.txt  output_tool_calls.txt  test_auth.py  test_board_frames.py  test_byo_tools.py  test_context_grounding.py  test_grounding_live.py  test_prompts.py  test_sessions.py  test_synthesis.py  test_tool_outputs.py  test_ws_pipeline.py
(+570 files in other folders)
