[project]
name = "mockup-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "anthropic",
    "asyncpg",
    "sqlalchemy[asyncio]",
    "motor",
    "certifi",
    "pydantic-settings",
    "httpx",
    "python-dotenv",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
